--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,10 +5,28 @@
     android:background="@drawable/clock_background"
     tools:context=".MainActivity" >
 
-    <com.example.widgetstest.Clock
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:orientation="vertical" >
+
+        <com.example.widgetstest.Clock
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+
+        <Button
+            android:id="@+id/addAlarm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="addAlarm" />
+
+        <Button
+            android:id="@+id/test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test" />s
+    </LinearLayout>
 
 </RelativeLayout>
